--- a/special-page.html
+++ b/special-page.html
@@ -76,9 +76,9 @@
         <p>Special message and images for Swati...</p>
         
         <div class="images-container">
-            <img class="image" src="/image1.jpg" alt="Image 1">
-            <img class="image" src="/image2.jpg" alt="Image 2">
-            <img class="image" src="/image3.jpg" alt="Image 3">
+            <img class="image" src="image/image1.jpg" alt="Image 1">
+            <img class="image" src="image/image2.jpg" alt="Image 2">
+            <img class="image" src="image/image3.jpg" alt="Image 3">
         </div>
     </div>
 </body>
